--- a/ChallengeProductsMVC/ChallengeProductsMVC/ChallengeProductsMVC.csproj
+++ b/ChallengeProductsMVC/ChallengeProductsMVC/ChallengeProductsMVC.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PTCCommon\PTCCommon.csproj" />
     <ProjectReference Include="..\PTCData\PTCData.csproj" />
   </ItemGroup>
 
